--- a/app/globals.css
+++ b/app/globals.css
@@ -14,10 +14,10 @@ body {
 
 .background {
   background-image: url("../public/bgg.jpg");
-  background-size: cover;
+  /* background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center left;
+  background-position: center left; */
 }
 
 .bg-gradient-transition {
