--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@ body {
 
 .background {
   background-image: url("../public/bgg.jpg");
-  /* background-size: cover; */
+  background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center left; 
