--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center left; 
+  background-position: center; 
 }
 
 .bg-gradient-transition {
