--- a/app/globals.css
+++ b/app/globals.css
@@ -16,8 +16,8 @@ body {
   background-image: url("../public/bgg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: top; 
+  /* background-attachment: fixed; */
+  background-position: center right; 
 }
 
 .bg-gradient-transition {
